Implement balance for date API
